# dhiret

./: .gitattributes  .gitignore  CLIP-live.ipynb  DINO-live.ipynb  MAML-live.ipynb  README.md  pyproject.toml  setup.py
dhiret/: dino_train.py  maml_train.py
dhiret/common/: dataset.py  dino_utils.py  evaluation.py  inference.py  retrieve.py  utils.py
dhiret/models/: clipzeroshot.py  dino_architectures.py  maml.py
embeddings/: clip_ViT-bigG-14_image_name_list.json  clip_ViT-bigG-14_index.ann  dino_dino_vits8_index.ann  siamese_efficientnet_b0_image_name_list.json  siamese_efficientnet_b0_index.ann
saved_models/dino_vits8/: dino_vits8_epoch9.pth
saved_models/efficientnet_b0/: efficientnet_b0_os128_tep5_shots4_supshots1_epoch1.pth
scripts/: clip_tester.sh  dino_tester.sh  maml_tester.sh  training_runner_a.sh  training_runner_b.sh
